Updated to Spring Boot 3.2.1 on Java 21; revved to 3.0.0